Replace Ghibli portrait with existing headshot

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+---
+layout: null
+---
 <!DOCTYPE HTML>
 <html lang="en">
 
@@ -7,14 +10,14 @@
   <title>Atharv Ramesh</title>
   <meta name="description"
     content="Machine Learning engineer building reliable perception and language systems for edge devices and research workflows." />
-  <link rel="stylesheet" type="text/css" href="assets/css/academic.css" />
-  <link rel="shortcut icon" type="image/png" href="assets/profile.png" />
+  <link rel="stylesheet" type="text/css" href="{{ '/assets/css/academic.css' | relative_url }}" />
+  <link rel="shortcut icon" type="image/png" href="{{ '/docs/assets/profile.png' | relative_url }}" />
 </head>
 
 <body>
   <div class="page">
     <header class="masthead">
-      <img class="masthead__photo" src="assets/profile.png" alt="Portrait of Atharv Ramesh">
+      <img class="masthead__photo" src="{{ '/docs/assets/profile.png' | relative_url }}" alt="Portrait of Atharv Ramesh">
       <div class="masthead__primary">
         <h1>Atharv Ramesh</h1>
         <p class="masthead__tagline">M.S. student · Electrical &amp; Computer Engineering · UC San Diego</p>
@@ -24,7 +27,7 @@
           <a href="mailto:a3nair@ucsd.edu">a3nair@ucsd.edu</a>
         </p>
         <p class="masthead__links">
-          <a href="Atharv_Ramesh_Resume.pdf">Resume</a>
+          <a href="{{ '/docs/Atharv_Ramesh_Resume.pdf' | relative_url }}">Resume</a>
           <span>·</span>
           <a href="https://github.com/AtharvRN">GitHub</a>
           <span>·</span>
@@ -50,7 +53,7 @@
     </div>
 
     <figure class="ghibli-portrait">
-      <img class="ghibli-portrait__image" src="assets/profile.png" alt="Portrait of Atharv Ramesh with a painterly treatment">
+      <img class="ghibli-portrait__image" src="{{ '/docs/assets/profile.png' | relative_url }}" alt="Portrait of Atharv Ramesh with a painterly treatment">
       <figcaption>A Ghibli-inspired take on my standard headshot for a bit of warmth.</figcaption>
     </figure>
 
@@ -131,7 +134,7 @@
             ~17%, and the repo now packages reproducible manifests for future Lean PRM experiments.
           </p>
           <figure>
-            <img src="images/dreamprm.png" alt="DreamPRM architecture diagram">
+            <img src="{{ '/docs/images/dreamprm.png' | relative_url }}" alt="DreamPRM architecture diagram">
             <figcaption>Image credit: DreamPRM authors (<a href="https://arxiv.org/pdf/2505.20241.pdf">source</a>)</figcaption>
           </figure>
         </article>
@@ -147,7 +150,7 @@
             improving recall on rare pathologies and underpinning our Bioengineering 2024 paper.
           </p>
           <figure>
-            <img src="images/retfound.png" alt="RETFound OCT project visual">
+            <img src="{{ '/docs/images/retfound.png' | relative_url }}" alt="RETFound OCT project visual">
           </figure>
         </article>
 
@@ -162,7 +165,7 @@
             across the mobile robot’s multi-channel microphone array.
           </p>
           <figure>
-            <img src="images/sp_cup.png" alt="Speaker verification competition presentation cover">
+            <img src="{{ '/docs/images/sp_cup.png' | relative_url }}" alt="Speaker verification competition presentation cover">
           </figure>
         </article>
       </section>
