Refocus homepage around research interests

--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,14 +1,14 @@
 ---
 layout: archive
-title: "Portfolio"
+title: "Projects"
 permalink: /portfolio/
 author_profile: true
 ---
 
 {% include base_path %}
 
+<p class="page__lead">This page collects projects outside my current research focus. Selected research items are highlighted on the homepage.</p>
 
 {% for post in site.portfolio %}
   {% include archive-single.html %}
 {% endfor %}
-
